Improvements made to formatting

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="other.html">Other</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+            <a href="#other">Other</a>
         </nav>
-        <h1 id="welcome">
-            <span class="text-box">Welcome to My Website!</span>
-        </h1>
+        <!-- <h1 id="welcome">
+            <span class="text-box">Welcome!</span>
+        </h1> -->
+        <div class="hero">
+            <div class="text-box">
+                <h1>Monellie Ghaffari</h1>
+                <p class="subtitle">
+                    Software Engineering Student @ UWaterloo | 1B
+                </p>
+            </div>
+        </div>
     </header>
 
     <div class="content-on-img">
@@ -23,7 +33,19 @@
             <h2>About Me</h2>
             <p>Hello! This is my personal website. I haven’t decided exactly what it’s for yet, but why not start now?</p>
         </section>
+        <section id="skills"></section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <p class="info">Here I'll probably put up projects I've worked on.</p>
+            <div class="card">Project2</div>
+            <div class="card">Project</div>
+            <div class="card">Project3</div>
+        </section>
+        <section id="contact"></section>
+        <section id="other"></section>
 
+        <div class="line"><hr></div>
+        <a href="#top">Go to Top</a>
         <section id="contact">
             <h2>Contact</h2>
             <p>You can reach me via email: <a href="mailto:m5ghaffa@uwaterloo.ca">m5ghaffa@uwaterloo.ca</a></p>
