--- a/other.html
+++ b/other.html
@@ -14,7 +14,7 @@
             <a href="other.html">Other</a>
         </nav>
         <h1 id="welcome">
-            <span class="text-box">Welcome to My Website!</span>
+            <span class="text-box">???</span>
         </h1> 
     </header>
 
