--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
             <a href="#contact">Contact</a>
             <a href="#other">Other</a>
         </nav>
-        <!-- <h1 id="welcome">
-            <span class="text-box">Welcome!</span>
-        </h1> -->
         <div class="hero">
             <div class="text-box">
                 <h1>Monellie Ghaffari</h1>
@@ -30,26 +27,75 @@
 
     <div class="content-on-img">
         <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! This is my personal website. I haven’t decided exactly what it’s for yet, but why not start now?</p>
-        </section>
-        <section id="skills"></section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p class="info">Here I'll probably put up projects I've worked on.</p>
-            <div class="card">Project2</div>
-            <div class="card">Project</div>
-            <div class="card">Project3</div>
-        </section>
-        <section id="contact"></section>
-        <section id="other"></section>
+            <h2 class="section-title">About Me</h2>
+            <p class="page-text">
+                Hi! My name is Monellie Ghaffari. I'm a first-year Software Engineering student at the University of Waterloo currently in my 1B term. I love building things that solve real problems and picking up new technologies along the way. I'm looking for a Summer 2025 co-op where I can contribute to meaningful projects and keep growing as a developer.
+            </p>
 
-        <div class="line"><hr></div>
-        <a href="#top">Go to Top</a>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can reach me via email: <a href="mailto:m5ghaffa@uwaterloo.ca">m5ghaffa@uwaterloo.ca</a></p>
+            <div class="terminal">
+                <div class="terminal-line">
+                    <span class="prompt">$ student.getCurrentStatus()
+                </div>
+                <div class="terminal-line">- Currently in 1B at UWaterloo</div>
+                <div class="terminal-line">- Seeking Summer 2026 Co-op</div>
+            </div>
         </section>
+        <section id="skills">
+            <h2 class="section-title">Skills</h2>
+            <div class="grid">
+                <div class="card">
+                    <div class="icon">🥋</div>
+                    <h3 class="card-title">Karate</h3>
+                    <p>Black belt, instructor</p>
+                </div>
+            </div>
+        </section>
+        <section id="projects">
+            <h2 class="section-title">Projects</h2>
+            <p class="page-text">Here I'll probably put up projects I've worked on.</p>
+            <div class="grid">
+                <div class="card">
+                    <div class="icon">1️⃣</div>
+                    <h3 class="card-title">Foodtopia</h3>
+                    <p>Educational Java game for kids</p>
+                    <ul>
+                        <li>Java Swing</li>
+                        <li>Collision detection</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <div class="icon">2️⃣</div>
+                    <h3 class="card-title">Project2</h3>
+                    <p>description</p>
+                </div>
+                <div class="card">
+                    <div class="icon">3️⃣</div>
+                    <h3 class="card-title">Project3</h3>
+                    <p>description</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h2 class="section-title">Contact</h2>
+            <div class="grid">
+                <a href="mailto:m5ghaffa@uwaterloo.ca" class="card">
+                    <div class="icon">✉️</div>
+                    <h3 class="card-title">Email</h3>
+                    <p>m5ghaffa@uwaterloo.ca</p>
+                </a>
+                <a href="https://linkedin.com/in/monellie-ghaffari" class="card">
+                        <div class="icon">👩‍💼</div>
+                        <h3 class="card-title">LinkedIn</h3>
+                        <p>linkedin.com/in/monellie-ghaffari</p>
+                </a>
+                <!-- add github -->
+            </div>
+        </section>
+        <section id="other"></section>
+        <div class="line">
+            <hr><br>
+            <a id="topper" href="#top">Go to Top</a>
+        </div>
     </div>
     
     <footer>
