--- a/index.html
+++ b/index.html
@@ -649,12 +649,12 @@
         <div class="terminal">
             <div class="terminal-line"><span class="prompt">$</span> student.getCurrentStatus()</div>
             <div class="terminal-line"><span class="output">→ Currently in 1B at University of Waterloo</span></div>
-            <div class="terminal-line"><span class="output">→ Actively seeking Summer 2025 Co-op opportunities</span></div>
+            <div class="terminal-line"><span class="output">→ Actively seeking Summer 2026 Co-op opportunities</span></div>
             <div class="terminal-line"><span class="output">→ Passionate about building impactful software solutions</span></div>
         </div>
         <p style="text-align: center; color: #aaa; max-width: 800px; margin: 2rem auto; line-height: 1.8;">
             I'm a first-year Software Engineering student at the University of Waterloo currently in my 1B term, with a passion for creating 
-            innovative solutions and learning new technologies. I'm eager to apply my skills in a Summer 2025 co-op role where 
+            innovative solutions and learning new technologies. I'm eager to apply my skills in a Summer 2026 co-op role where 
             I can contribute to meaningful projects while continuing to grow as a developer.
         </p>
     </div>
@@ -785,7 +785,7 @@
             <div class="project-card" onclick="window.open('https://snowmark.vercel.app', '_blank')">
                 <div class="project-img">📚</div>
                 <div class="project-content">
-                    <h3 class="project-title">Study Time Tracker & Marks Predictor</h3>
+                    <h3 class="project-title">Snowmark</h3>
                     <p class="project-desc">Web application helping students manage study schedules and predict grades using data-driven insights.</p>
                     <ul class="project-features">
                         <li>Backend with Python/Flask and MySQL database for data persistence</li>
@@ -802,7 +802,7 @@
                 </div>
             </div>
 
-            <div class="project-card" onclick="window.open('https://github.com/lavien/foodtopia', '_blank')">
+            <div class="project-card" onclick="window.open('https://github.com/lavienlan/foodtopia', '_blank')">
                 <div class="project-img">🎮</div>
                 <div class="project-content">
                     <h3 class="project-title">Foodtopia - Educational Children's Game</h3>
@@ -820,7 +820,7 @@
                 </div>
             </div>
 
-            <div class="project-card" onclick="window.open('https://github.com/llie/good-person', '_blank')">
+            <div class="project-card" onclick="window.open('https://github.com/monellie/good-person', '_blank')">
                 <div class="project-img">🎭</div>
                 <div class="project-content">
                     <h3 class="project-title">Animated Decision Game</h3>
@@ -836,7 +836,7 @@
                 </div>
             </div>
 
-            <div class="project-card" onclick="window.open('https://github.com/llie/hangman', '_blank')">
+            <div class="project-card" onclick="window.open('https://github.com/monellie/hangman', '_blank')">
                 <div class="project-img">🔤</div>
                 <div class="project-content">
                     <h3 class="project-title">Hangman Game</h3>
